--- a/DemoTranhChap/nbproject/project.properties
+++ b/DemoTranhChap/nbproject/project.properties
@@ -35,17 +35,17 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DemoTranhChap
 endorsed.classpath=
 excludes=
-file.reference.jtds-1.3.1.jar=C:\\Users\\aguyl\\Downloads\\jtds-1.3.1-dist\\jtds-1.3.1.jar
 file.reference.sqljdbc4.jar=C:\\Users\\Giang Huynh\\Downloads\\sqljdbc4.jar
-file.reference.swing-layout-1.0.4.jar=E:\\MyDownloads\\swing-layout-1.0.4.jar\\swing-layout-1.0.4.jar
+file.reference.sqljdbc4.jar-1=..\\Libs\\sqljdbc4.jar
+file.reference.swing-layout-1.0.4.jar=..\\Libs\\swing-layout-1.0.4.jar
 file.reference.swing-layout-1.0.4.jar-1=C:\\Users\\Giang Huynh\\Downloads\\swing-layout-1.0.4.jar\\swing-layout-1.0.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.swing-layout-1.0.4.jar}:\
-    ${file.reference.jtds-1.3.1.jar}:\
     ${file.reference.swing-layout-1.0.4.jar-1}:\
-    ${file.reference.sqljdbc4.jar}
+    ${file.reference.sqljdbc4.jar}:\
+    ${file.reference.sqljdbc4.jar-1}:\
+    ${file.reference.swing-layout-1.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
